CB-13336 Allow clusters with ephemeral storage stopped if there are EBS disks attached